Practice 21 - Calendar made with CSS Grid

--- a/index.html
+++ b/index.html
@@ -10,68 +10,52 @@
 </head>
 
 <body>
-
+        <div class="calendar">
+                <div class="calendar__header">
+                    <div class="calendar__month">June</div>
+                    <div class="calendar__week">
+                        <div class="calendar__day calendar__item">S</div>
+                        <div class="calendar__day calendar__item">M</div>
+                        <div class="calendar__day calendar__item">T</div>
+                        <div class="calendar__day calendar__item">W</div>
+                        <div class="calendar__day calendar__item">T</div>
+                        <div class="calendar__day calendar__item">F</div>
+                        <div class="calendar__day calendar__item">S</div>
+                    </div>
+                </div>
+                <div class="calendar__dates">
+                    <div class="calendar__date calendar__item">1</div>
+                    <div class="calendar__date calendar__item">2</div>
+                    <div class="calendar__date calendar__item">3</div>
+                    <div class="calendar__date calendar__item">4</div>
+                    <div class="calendar__date calendar__item">5</div>
+                    <div class="calendar__date calendar__item">6</div>
+                    <div class="calendar__date calendar__item">7</div>
+                    <div class="calendar__date calendar__item">8</div>
+                    <div class="calendar__date calendar__item">9</div>
+                    <div class="calendar__date calendar__item">10</div>
+                    <div class="calendar__date calendar__item">11</div>
+                    <div class="calendar__date calendar__item">12</div>
+                    <div class="calendar__date calendar__item">13</div>
+                    <div class="calendar__date calendar__item">14</div>
+                    <div class="calendar__date calendar__item">15</div>
+                    <div class="calendar__date calendar__item">16</div>
+                    <div class="calendar__date calendar__item">17</div>
+                    <div class="calendar__date calendar__item">18</div>
+                    <div class="calendar__date calendar__item">19</div>
+                    <div class="calendar__date calendar__item">20</div>
+                    <div class="calendar__date calendar__item">21</div>
+                    <div class="calendar__date calendar__item">22</div>
+                    <div class="calendar__date calendar__item">23</div>
+                    <div class="calendar__date calendar__item">24</div>
+                    <div class="calendar__date calendar__item">25</div>
+                    <div class="calendar__date calendar__item">26</div>
+                    <div class="calendar__date calendar__item">27</div>
+                    <div class="calendar__date calendar__item">28</div>
+                    <div class="calendar__date calendar__item">29</div>
+                    <div class="calendar__date calendar__item">30</div>
+                </div>
+            </div>
 </body>
 
-   <section class="app">
-    <header class="app__header">
-        <a href="#nav" class="toggle open">Open</a>
-        <h1>Header</h1>
-    </header>
-    <nav id="nav" class="app__nav">
-        <a href="#" class="toggle close">X</a>
-        <h2>Navigation</h2>
-        <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-            <li>Item 4</li>
-            <li>Item 5</li>
-        </ul>
-    </nav>
-    <aside class="app__aside">
-        <ul class="app__items">
-            <li class="app__item">Link 1</li>
-            <li class="app__item">Link 2</li>
-            <li class="app__item">Link 3</li>
-            <li class="app__item">Link 4</li>
-        </ul>
-    </aside>
-    <main class="app__main">
-        <h2 class="app__title">Navigation off canvas with CSS Grid</h2>
-        <p class="app__text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt voluptatum, iure quam quo quibusdam quod est deleniti corrupti,
-            dolore distinctio similique exercitationem ullam minima ad sit, dolores esse voluptatibus natus assumenda. Cum
-            sapiente culpa mollitia optio atque natus voluptas soluta labore, unde quis iure doloremque consequatur vitae,
-            odit, praesentium perspiciatis? Molestiae, repellendus provident! Incidunt neque distinctio iure quibusdam dicta
-            aut, modi laudantium tempore architecto minima eum laborum quidem necessitatibus mollitia sit enim praesentium.
-            Odio dicta harum at, earum libero sit dolorum mollitia, eos culpa possimus tempore assumenda explicabo aspernatur.
-            Magni expedita libero quas, similique mollitia eligendi distinctio incidunt aut magnam.
-
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi pariatur est autem nemo aperiam quaerat amet debitis, harum soluta necessitatibus itaque asperiores minus! Molestias totam repellendus autem ad explicabo aliquid?
-            Officiis possimus cumque velit voluptatibus labore natus corporis nulla odit quod earum odio ullam illum exercitationem ex quae enim molestiae sit dolorum pariatur, neque placeat nobis voluptatem? Officia, vitae! Esse!
-            Necessitatibus explicabo, ex doloremque possimus amet assumenda consectetur voluptate corporis eum, odit distinctio ab, itaque consequuntur nisi hic consequatur molestiae blanditiis. Nam ad nostrum esse illum velit sed sit reprehenderit?
-            Incidunt asperiores unde iste aliquid, eum amet suscipit minima vel perspiciatis dolore minus atque quae ipsam eos. Temporibus, consectetur, ipsum, quibusdam et nisi rerum eum minus sunt dolore pariatur minima.
-            Expedita harum ex enim rem illo officia excepturi a consectetur odio fuga error pariatur consequuntur voluptate, aperiam illum ut explicabo quo ullam laborum facere, vero quos? Illo alias tempore praesentium.
-            Enim, doloremque nam maxime delectus, nesciunt reprehenderit ratione iste consequatur deserunt consequuntur animi veniam magni repudiandae sed inventore vel dolores minima labore laboriosam odit! Natus nam laboriosam omnis mollitia ducimus!
-            Nihil asperiores nisi atque beatae quia et voluptatem itaque cumque! Nostrum voluptates possimus amet quo iure quis culpa. Quae magnam ea fuga tempora, commodi libero beatae quidem fugiat animi accusamus?
-            Natus blanditiis, et inventore non ex illo quae cumque repudiandae iure ratione dicta sapiente perspiciatis nam excepturi nobis fuga maiores vero reiciendis minus! Provident obcaecati, at dignissimos maxime aspernatur soluta.
-            Quas dolorem alias magni rerum ducimus modi quibusdam eligendi sapiente ab accusamus enim, itaque tempora distinctio voluptas error numquam nam? Magnam sapiente in corrupti ullam et voluptatem aut quo aspernatur!
-            Qui dignissimos distinctio ad, iure laudantium blanditiis eum vitae eligendi placeat illo nihil ipsam dolorem dicta perspiciatis harum, a temporibus? Veritatis sit architecto est quo maiores dolorum totam saepe sapiente.
-            Expedita porro ab cumque vero amet nulla, architecto quas magni doloremque itaque! Dicta ex officiis hic aliquam reprehenderit, magni unde. Libero sed natus porro illo repellendus in mollitia dicta quibusdam.
-            Corrupti quia minima, cumque vel, autem voluptate consequuntur a iste porro temporibus veritatis debitis illum quae enim nam omnis non unde quisquam doloremque possimus hic perferendis. Pariatur illum soluta assumenda!
-            Sapiente repudiandae tempore commodi eligendi! Voluptas inventore dignissimos aliquid modi, eius odit excepturi dolor voluptates ex nesciunt earum laborum, exercitationem dicta praesentium dolores. Voluptatem eos, architecto maxime veniam dicta delectus?
-            Cumque tempora nesciunt deserunt fuga animi vitae soluta cupiditate ea quae. Ex officiis maiores reiciendis, architecto velit provident repellendus, eum voluptatem assumenda numquam doloribus impedit praesentium quam, tenetur dicta temporibus?
-            Saepe sequi quasi doloremque! Maxime dolores, eius tenetur porro iusto consequuntur sapiente at magni quas nulla, officia assumenda quod itaque sint nam. Voluptatem inventore quas hic cum ab, officiis minima!
-            Excepturi accusamus mollitia molestias magni quod amet cumque aliquam. Nulla corrupti fugiat eius nihil officia aperiam ad architecto nisi ex qui neque eum in magni, tempore adipisci aspernatur, quisquam blanditiis.
-            Asperiores iure rerum nesciunt saepe ea! Ratione, sunt dignissimos iure consectetur in modi, quae iste reprehenderit eveniet quod enim tempore officia voluptates nostrum? Ipsa voluptate vero voluptatem expedita iste pariatur.
-            Veniam magni commodi maxime similique error voluptas corrupti obcaecati deserunt minus esse beatae voluptates laudantium aliquid reprehenderit explicabo, atque qui quos, neque non harum ipsam? Sit expedita itaque magnam accusamus.
-            Nostrum ullam, voluptate quidem quasi, animi quibusdam voluptas accusantium odio provident labore aperiam officiis quisquam, alias quod dolorum aspernatur iste earum consequatur dignissimos expedita dolor. Repellendus fugit provident corrupti officiis.
-            Animi cum totam sapiente obcaecati voluptates dolorem sunt consequatur, reiciendis accusantium porro nulla, id ad facere culpa quaerat, dolore error autem aliquid quae voluptatum velit? Voluptate fugit quas at corporis?
-        </p>
-    </main>
-    <footer class="app__footer">
-        <h2>Footer</h2>
-    </footer>
-</section>
 </html>
