--- a/index.html
+++ b/index.html
@@ -10,33 +10,32 @@
 </head>
 
 <body>
-    <h1>Grid Placement</h1>
-    <article class="history">
-        <div class="history__item r1c1">Image</div>
-        <div class="history__item r1c2">Text</div>
-        <div class="history__item r2c2">Image</div>
-        <div class="history__item r1c3">Text</div>
-        <div class="history__item r1c1">Image</div>
-        <div class="history__item r1c1">Image</div>
-        <div class="history__item r1c1">Image</div>
-        <div class="history__item r2c1">Text</div>
-        <div class="history__item r2c2">Text</div>
-        <div class="history__item r2c2">Text</div>
-        <div class="history__item r2c1">Image</div>
-        <div class="history__item r1c3">Image</div>
-        <div class="history__item r1c3">Image</div>
-        <div class="history__item r1c3">Text</div>
-        <div class="history__item r2c1">Image</div>
-        <div class="history__item r2c2">Text</div>
-        <div class="history__item r1c1">Text</div>
-        <div class="history__item r1c2">Image</div>
-        <div class="history__item r2c1">Image</div>
-        <div class="history__item r2c2">Text</div>
-        <div class="history__item r2c3">Text</div>
-        <div class="history__item r1c1">Image</div>
-        <div class="history__item r2c1">Text</div>
-        <div class="history__item r2c1">Image</div>
-    </article>
+   <div class="grid">
+       <div class="grid__item">1</div>
+       <div class="grid__item">2</div>
+       <div class="grid__item">3</div>
+       <div class="grid__item">4</div>
+       <div class="grid__item">5</div>
+       <div class="grid__item">6</div>
+       <div class="grid__item">7</div>
+       <div class="grid__item">8</div>
+       <div class="grid__item">9</div>
+       <div class="grid__item">10</div>
+       <div class="grid__item">11</div>
+       <div class="grid__item">12</div>
+       <div class="grid__item">13</div>
+       <div class="grid__item">14</div>
+       <div class="grid__item">15</div>
+       <div class="grid__item">16</div>
+       <div class="grid__item">17</div>
+       <div class="grid__item">18</div>
+       <div class="grid__item">19</div>
+       <div class="grid__item">20</div>
+       <div class="grid__item">21</div>
+       <div class="grid__item">22</div>
+       <div class="grid__item">23</div>
+       <div class="grid__item">24</div>
+   </div>
 </body>
 
 </html>
