--- a/index.html
+++ b/index.html
@@ -8,34 +8,29 @@
     <title>CSS Grid</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
-   <div class="grid">
-       <div class="grid__item">1</div>
-       <div class="grid__item">2</div>
-       <div class="grid__item">3</div>
-       <div class="grid__item">4</div>
-       <div class="grid__item">5</div>
-       <div class="grid__item">6</div>
-       <div class="grid__item">7</div>
-       <div class="grid__item">8</div>
-       <div class="grid__item">9</div>
-       <div class="grid__item">10</div>
-       <div class="grid__item">11</div>
-       <div class="grid__item">12</div>
-       <div class="grid__item">13</div>
-       <div class="grid__item">14</div>
-       <div class="grid__item">15</div>
-       <div class="grid__item">16</div>
-       <div class="grid__item">17</div>
-       <div class="grid__item">18</div>
-       <div class="grid__item">19</div>
-       <div class="grid__item">20</div>
-       <div class="grid__item">21</div>
-       <div class="grid__item">22</div>
-       <div class="grid__item">23</div>
-       <div class="grid__item">24</div>
-   </div>
+        <h1>Responsive Grid</h1>
+        <article class="collage">
+          <h2 class="collage__title">Title</h2>
+          <div class="collage__text__top">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat corporis aspernatur pariatur, labore quod odio itaque cum qui in delectus, illum blanditiis consequuntur reprehenderit. Aspernatur quasi corporis et recusandae, mollitia.</p>
+          </div>
+          <div class="collage__text__middle">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat corporis aspernatur pariatur, labore quod odio itaque cum qui in delectus, illum blanditiis consequuntur reprehenderit. Aspernatur quasi corporis et recusandae, mollitia.</p>
+          </div>
+          <div class="collage__text__bottom">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat corporis aspernatur pariatur, labore quod odio itaque cum qui in delectus, illum blanditiis consequuntur reprehenderit. Aspernatur quasi corporis et recusandae, mollitia.</p>
+          </div>
+          <div class="collage__image__top">
+            <img src="http://lorempixel.com/400/400/sports/">
+          </div>
+          <div class="collage__image__middle">
+            <img src="http://lorempixel.com/400/400/sports/">
+          </div>
+          <div class="collage__image__bottom">
+            <img src="http://lorempixel.com/400/400/sports/">
+          </div>
+      </article>
 </body>
 
 </html>
