Practice 24 - CSS Grid | Practice used to get to know how to use supports

--- a/index.html
+++ b/index.html
@@ -9,28 +9,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-        <h1>Responsive Grid</h1>
-        <article class="collage">
-          <h2 class="collage__title">Title</h2>
-          <div class="collage__text__top">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat corporis aspernatur pariatur, labore quod odio itaque cum qui in delectus, illum blanditiis consequuntur reprehenderit. Aspernatur quasi corporis et recusandae, mollitia.</p>
-          </div>
-          <div class="collage__text__middle">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat corporis aspernatur pariatur, labore quod odio itaque cum qui in delectus, illum blanditiis consequuntur reprehenderit. Aspernatur quasi corporis et recusandae, mollitia.</p>
-          </div>
-          <div class="collage__text__bottom">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat corporis aspernatur pariatur, labore quod odio itaque cum qui in delectus, illum blanditiis consequuntur reprehenderit. Aspernatur quasi corporis et recusandae, mollitia.</p>
-          </div>
-          <div class="collage__image__top">
-            <img src="http://lorempixel.com/400/400/sports/">
-          </div>
-          <div class="collage__image__middle">
-            <img src="http://lorempixel.com/400/400/sports/">
-          </div>
-          <div class="collage__image__bottom">
-            <img src="http://lorempixel.com/400/400/sports/">
-          </div>
-      </article>
+        <header>Header</header>
+        <main>Main</main>
+        <aside>Aside</aside>
+      <footer>Footer</footer>
 </body>
 
 </html>
