Practice 26  | Window Gallery

--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-        <header>Header</header>
-        <main>Main</main>
-        <aside>Aside</aside>
-      <footer>Footer</footer>
+        <h1>Window Gallery Flexbox + Grid</h1>
+        <aside class="WindowGallery">
+          <header class="WindowGallery-title">
+            <h2>Título</h2>
+          </header>
+          <div class="WindowGallery-item">
+            <img src="http://lorempixel.com/400/400/sports/">
+          </div>
+          <div class="WindowGallery-item">
+            <img src="http://lorempixel.com/400/400/sports/">
+          </div>
+          <div class="WindowGallery-item">
+            <img src="http://lorempixel.com/400/400/sports/">
+          </div>
+          <div class="WindowGallery-item">
+            <img src="http://lorempixel.com/400/400/sports/">
+          </div>
+      </aside>
 </body>
 
 </html>
