Layout with flexbox, components with grid

--- a/index.html
+++ b/index.html
@@ -9,24 +9,126 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-        <h1>Window Gallery Flexbox + Grid</h1>
-        <aside class="WindowGallery">
-          <header class="WindowGallery-title">
-            <h2>Título</h2>
-          </header>
-          <div class="WindowGallery-item">
-            <img src="http://lorempixel.com/400/400/sports/">
-          </div>
-          <div class="WindowGallery-item">
-            <img src="http://lorempixel.com/400/400/sports/">
-          </div>
-          <div class="WindowGallery-item">
-            <img src="http://lorempixel.com/400/400/sports/">
-          </div>
-          <div class="WindowGallery-item">
-            <img src="http://lorempixel.com/400/400/sports/">
-          </div>
-      </aside>
+        <div class="main-header-container">
+                <header class="main-header row">
+                  <div class="column logo">Big Tech Company</div>
+                  <!--<div class="column menu">-->
+                    <!--<ul>-->
+                      <!--<li><a href="#">Nosotros</a></li>-->
+                      <!--<li><a href="#">Servicios</a></li>-->
+                      <!--<li><a href="#">Portafolio</a></li>-->
+                      <!--<li><a href="#">Contacto</a></li>-->
+                    <!--</ul>-->
+                  <!--</div>-->
+                </header>
+              </div>
+                <div class="main-content row">
+                  <main class="main column">
+                    <h1 class="page-title">Lastest news</h1>
+                    <div class="news-container">
+                      <article class="news-item featured">
+                        <img src="http://lorempixel.com/500/300/people" alt="People" class="news-item__img">
+                        <div class="news-item__body">
+                          <h2 class="news-item__title">Some amazing title</h2>
+                          <p class="news-item__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas feugiat dolor. Quisque eget eros quis neque egestas ultricies. Aliquam porttitor metus ut egestas consequat. Nullam vel dui in justo scelerisque egestas. Cras non facilisis justo. Nunc in faucibus risus. </p>
+                        </div>
+                      </article>
+                      <article class="news-item">
+                        <img src="http://lorempixel.com/500/300/people" alt="People" class="news-item__img">
+                        <h2 class="news-item__title">Some amazing news</h2>
+                        <p class="news-item__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas feugiat dolor. Quisque eget eros quis neque egestas ultricies. Aliquam porttitor metus ut egestas consequat. Nullam vel dui in justo scelerisque egestas. Cras non facilisis justo. Nunc in faucibus risus. </p>
+                      </article>
+                      <article class="news-item">
+                        <img src="http://lorempixel.com/500/300/people" alt="People" class="news-item__img">
+                        <h2 class="news-item__title">Another amazing article</h2>
+                        <p class="news-item__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas feugiat dolor. Quisque eget eros quis neque egestas ultricies. Aliquam porttitor metus ut egestas consequat. Nullam vel dui in justo scelerisque egestas. Cras non facilisis justo. Nunc in faucibus risus. </p>
+                      </article>
+                    </div>
+                    <section class="section">
+                    <h2 class="section-title"> Look the photos of the event</h2>
+                    <div class="gallery">
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                      <div class="gallery-item">
+                        <img src="https://lorempixel.com/600/400/nature" alt="Naturaleza" class="gallery-img">
+                      </div>
+                    </div>
+                    </section>
+                  </main>
+                  <aside class="main-aside column">
+                    <div class="block">
+                      <h2 class="block__title">Sidebar</h2>
+                      <p class="block__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean egestas feugiat dolor. Quisque eget eros quis neque egestas ultricies. </p>
+                    </div>
+                  </aside>
+                </div>
+              <div class="main-footer-container">
+                <footer class="main-footer row">Big Tech Company | 2010 - 2018</footer>
+              </div>
 </body>
 
 </html>
